# prompter

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  generate-version.bash  prompter-full.json  prompter.json
doc/: README  colorcodes.rs
src/: main.rs  prompt.rs
src/segments/: cwd.rs  dummy.rs  env.rs  exit_code.rs  git.rs  hostname.rs  jobs.rs  mod.rs  read_only.rs  root.rs  ssh.rs  stdout.rs  username.rs  virtual_env.rs
src/themes/: crazy.rs  default.rs  mod.rs  painter.rs
