[package]

name = "prompter"
version = "1.0.0"
authors = [ "Matthias Schmidt <matthias.schmidt@gmail.com>" ]

[dependencies]
serde_json = "1.0"
whoami = "0.5.0"
regex = "1"
libc = "0.2.0"
        
[profile.dev]
incremental = false
opt-level = 0
debug = true

[profile.test]
incremental = false
opt-level = 0
debug = true

[profile.release]
incremental = false
opt-level = 3
debug = false
